Added a another section

--- a/style.css
+++ b/style.css
@@ -20,3 +20,9 @@
     width: 100%;
     background-color: #f6d6ad;
 }
+
+.section-4 {
+    height: 400px;
+    width: 100%;
+    background-color: #f9c0c0;
+}
