changed color on section 1

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .section-1 {
     height: 400px;
     width: 100%;
-    background-color: #ccf6c8;
+    background-color: #ff414d;
 }
 
 .section-2 {
