--- a/style.css
+++ b/style.css
@@ -26,3 +26,9 @@
     width: 100%;
     background-color: #8675a9;
 }
+
+.section-5 {
+    height: 400px;
+    width: 100%;
+    background-color: #a011a5;
+}
