--- a/style.css
+++ b/style.css
@@ -32,3 +32,9 @@
     width: 100%;
     background-color: #a011a5;
 }
+
+.section-6 {
+    height: 400px;
+    width: 100%;
+    background-color: #11a54a;
+}
