--- a/style.css
+++ b/style.css
@@ -38,3 +38,9 @@
     width: 100%;
     background-color: #11a54a;
 }
+
+.section-7 {
+    height: 400px;
+    width: 100%;
+    background-color: #f0ed3d;
+}
